--- a/docs/notes/TypeScript/手册指南.md
+++ b/docs/notes/TypeScript/手册指南.md
@@ -1,14 +1,16 @@
-## 接口
+## 3.接口
 ```
 interface SquareConfig {
   color?: string;
   width?: number;
 }
 ```
-### readonly VS const
+### 3.1readonly VS const
+readonly 关键字将属性设置为只读的。只读属性必须在声明时或构造函数里被初始化。
+
 最简单判断该使用readonly还是const的方法是看要把它作为变量使用还是作为一个属性。作为变量使用的话用const，作为属性的话用readonly。
 
-### 额外的属性检查
+### 3.2额外的属性检查
 ```
 function createSquare(config: SquareConfig): { color: string } {
     // ...
@@ -34,7 +36,7 @@ interface SquareConfig {
 
 表示 SquareConfig 可以有任意数量的属性，而且只要它们不是 color 和 width ，那么就无所谓他们的类型是什么。
 
-### 函数类型
+### 3.3函数类型
 为了使用接口表示函数类型，我们需要给接口定义一个`调用签名`。它就像是一个只有参数列表和返回值类型的函数定义。参数列表里的每个参数都需要名字和类型。
 ```
 interface SearchFunc {
@@ -55,8 +57,8 @@ mySearch = function(src, sub) {
 
 对于函数的参数名不需要与接口里定义的名字相匹配。函数的参数会逐个进行检查，要求对应位置上的参数类型是兼容的。如果没有制定类型，ts的类型系统会推断出参数类型。如果函数返回值的类型和接口要求的返回值类型不匹配，类型检查器会警告我们函数的返回值类型和接口中的定义不匹配。
 
-## 类
-### 继承
+## 4类
+### 4.1继承
 ```
 class Animal {
     name:string;
@@ -99,3 +101,149 @@ Tommy the Palomino moved 34m.
 在子类里可以重写父类的方法， Snake 类和 Horse 类都创建了move 方法，他们重写了从 Animal 继承来的 move 方法，是的 move 方法根据不同的类而具有不同的功能。
 注意，即使 tom 被声明为 Animal 类型，但因为他的值是 Horse ，tom.move(34)会调用Horse里的重写方法。
 
+### 4.2理解protected
+protected 修饰符与 private 修饰符的行为很相似，但有一点不同，protected 成员在派生类中仍然可以访问：
+```
+class Person {
+    protected name: string;
+    constructor(name: string) { this.name = name; }
+}
+
+class Employee extends Person {
+    private department: string;
+
+    constructor(name: string, department: string) {
+        super(name)
+        this.department = department;
+    }
+
+    public getElevatorPitch() {
+        return `Hello, my name is ${this.name} and I work in ${this.department}.`;
+    }
+}
+
+let howard = new Employee("Howard", "Sales");
+console.log(howard.getElevatorPitch());
+console.log(howard.name); // error
+```
+    注意：我们不能在Person类外使用name，但我们仍然可以通过Employee类的实例方法访问，因为Employee是由Person派生而来的。
+
+构造函数也可以被标记成protected，这意味着这个类不能在包含他的类外被实例化，但是能被继承：
+```
+class Person {
+    protected name: string;
+    protected constructor(theName: string) { this.name = theName; }
+}
+```
+
+### 4.3存储器
+ts支持通过getters/setters来截取对对象成员的访问。
+- 没有使用存取器，可以随意设置fullName：
+```
+class Employee {
+    fullName: string;
+}
+
+let employee = new Employee();
+employee.fullName = "Bob Smith";
+if (employee.fullName) {
+    console.log(employee.fullName);
+}
+```
+- 先检查用户密码是否正确，然后再允许其修改员工信息。将例子中的直接访问fullName改成可以检查密码的`set`方法：
+```
+let passcode = "secret passcode";
+
+class Employee {
+    private _fullName: string;
+
+    get fullName(): string {
+        return this._fullName;
+    }
+
+    set fullName(newName: string) {
+        if (passcode && passcode == "secret passcode") {
+            this._fullName = newName;
+        }
+        else {
+            console.log("Error: Unauthorized update of employee!");
+        }
+    }
+}
+
+let employee = new Employee();
+employee.fullName = "Bob Smith";
+if (employee.fullName) {
+    alert(employee.fullName);
+}
+```
+*注意：* 1. 存取器要么编译器设置为输出ECMAcript5或更高，不支持降级到ECMAScript。 2. 只带有 get 不带有 set 的存取器自动被推断为readonly。
+
+### 4.4静态属性
+以上是类的实例成员，是仅当类被实例化的时候才会被初始化的属性。我们也可以创建类的静态成员，这些属性存在于本身上面而不是类的实例上。每个实例想要访问这个属性的时候，都要在属性前面加上类名，如同在实例属性上使用`this.`前缀来访问属性一样。
+```
+class Grid {
+    static origin = {x: 0, y: 0};
+    calculateDistanceFromOrigin(point: {x: number; y: number;}) {
+        let xDist = (point.x - Grid.origin.x);
+        let yDist = (point.y - Grid.origin.y);
+        return Math.sqrt(xDist * xDist + yDist * yDist) / this.scale;
+    }
+    constructor (public scale: number) { }
+}
+
+let grid1 = new Grid(1.0);  // 1x scale
+let grid2 = new Grid(5.0);  // 5x scale
+
+console.log(grid1.calculateDistanceFromOrigin({x: 10, y: 10}));
+console.log(grid2.calculateDistanceFromOrigin({x: 10, y: 10}));
+```
+
+### 4.5抽象类
+抽象类做为其他派生类的基类使用，他们一般不会直接被实例化。不同于接口，抽象类可以包含成员的实现细节，`abstract`关键字是用于定义抽象类和在抽象类内部定义抽象方法。
+
+抽象类中的抽象方法不包含具体实现并且必须在派生类中实现。抽象方法的实现语法与接口方法类似，两者都是定义方法签名但不包含方法体。然而，抽象方法必须包含`abstract`关键字并且可以包含访问修饰符。
+```
+abstract class Department {
+
+    constructor(public name: string) {
+    }
+
+    printName(): void {
+        console.log('Department name: ' + this.name);
+    }
+
+    abstract printMeeting(): void; // 必须在派生类中实现
+}
+
+class AccountingDepartment extends Department {
+
+    constructor() {
+        super('Accounting and Auditing'); // constructors in derived classes must call super()
+    }
+
+    printMeeting(): void {
+        console.log('The Accounting Department meets each Monday at 10am.');
+    }
+
+    generateReports(): void {
+        console.log('Generating accounting reports...');
+    }
+}
+
+let department: Department; // ok to create a reference to an abstract type
+department = new Department(); // error: cannot create an instance of an abstract class
+department = new AccountingDepartment(); // ok to create and assign a non-abstract subclass
+department.printName();
+department.printMeeting();
+department.generateReports(); // error: method doesn't exist on declared abstract type
+```
+
+### 4.6高级技巧
+#### 4.6.1构造函数
+
+#### 4.6.2 把类当做接口使用
+
+## 5.函数
+### 5.1函数类型
+函数类型包含两部分：参数类型和返回值类型。
