--- a/docs/diary/2017.11.md
+++ b/docs/diary/2017.11.md
@@ -17,3 +17,34 @@ Promise [链接](http://www.jianshu.com/p/063f7e490e9a)
 console.table({});
 
 [打印对象](https://blog.fundebug.com/2017/11/08/14-javascript-debugging-tips/)
+
+#### 2017.11.27
+
+[事件类型](https://developer.mozilla.org/zh-CN/docs/Web/Events)
+
+#### 2017.11.29
+
+#### 1.box-sizing
+
+`box-sizing`属性，[链接](http://www.w3school.com.cn/cssref/pr_box-sizing.asp)
+
+指定带边框的框的属性
+
+- content-box：宽度和高度分别应用到元素的内容框，在宽度和高度之外绘制元素的内边距和边框；
+- border-box：为元素指定的任何内边距和边框都将在已设定的宽度和高度内进行绘制，通过从已设定的宽度和高度分别减去边框和内边距才能得到内容的宽度和高度；
+- inherit：从父元素继承。
+
+#### 2. 
+
+[链接](https://segmentfault.com/q/1010000010831114)
+[链接](https://zhuanlan.zhihu.com/p/25808995?group_id=825729887779307520)
+
+#### 3.字体度量，line-height,vertical-align
+[链接](https://zhuanlan.zhihu.com/p/25808995?group_id=825729887779307520)
+
+#### 4.FC、BFC、IFC、FFC、GFC
+[链接](https://www.cnblogs.com/camille666/p/css_bfc_ifc_ffc_gfc.html)
+
+#### 2017.11.30
+
+[纯css实现各类气球泡泡对话框效果](http://www.zhangxinxu.com/wordpress/2010/03/%E7%BA%AFcss%E5%AE%9E%E7%8E%B0%E5%90%84%E7%B1%BB%E6%B0%94%E7%90%83%E6%B3%A1%E6%B3%A1%E5%AF%B9%E8%AF%9D%E6%A1%86%E6%95%88%E6%9E%9C/)
