--- a/docs/essay(杂记)/小贴士.md
+++ b/docs/essay(杂记)/小贴士.md
@@ -3,3 +3,12 @@
 2. 区域和语言 - ‘语言’一栏中‘添加语言’下选中当前语言 - 选项；
 3. ‘键盘’一栏中‘微软拼音’ - 选项 - 常规；
 4. ‘默认模式’下‘选择输出简体或繁体’
+
+#### 2. mysql查询表结构改变
+
+show table status from `smodb3.0`
+
+#### 3. 键盘快捷键操作浏览器
+- F1：打开一个新标签页；
+- F3：页面查找 == ctrl+F；
+- F6：选中导航栏URL；
