--- a/docs/notes/CSS/developer.mozilla.org/属性.md
+++ b/docs/notes/CSS/developer.mozilla.org/属性.md
@@ -16,3 +16,25 @@
 
 **浏览器前缀**：`-webkit`、`-moz`；*chrome1.0需使用前缀，chrome10.0已移除-webkit前缀*。
 
+建议将所有的元素的box-sizing都设为border-box：
+```
+    *,*:before,*:after{
+        -webkit-box=sizing:border-box;
+        -moz-box-sizing:border-box;
+        box-sizing:border-box;
+    }
+```
+疑问：bootstrap为什么要这样分开写？
+```
+    * {
+        -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+                box-sizing: border-box;
+        }
+    *:before,
+    *:after {
+    -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+            box-sizing: border-box;
+    }
+```
