--- a/docs/notes/CSS/Scss/使用技巧.md
+++ b/docs/notes/CSS/Scss/使用技巧.md
@@ -1,3 +1,5 @@
+去掉网站上的广告：    var a = document.getElementsByClassName('gg');for(var i=0,len=a.length;i<len;i+=1){a[i].style.display='none';}
+
 #### 一.[媒体查询的优化工作流程](https://www.sass.hk/skill/sass6.html)
 
 #### 1.最简单的做法：
@@ -120,3 +122,67 @@ p {
 - 缺点：
     1. 删除一个元素时，必须回到media-queries.scss文件中删除对应的调用，不然会抛出编译错误，
     2. 重构会比嵌套的媒体查询更麻烦。
+
+---
+
+#### 二、[SCSS小技巧](https://www.sass.hk/skill/sass86.html)
+
+#### 1. `index($list, $value)`：返回一个指在列表中的位置值；
+```
+    >> index(1px solid red, 1px)
+    1
+    >> index(1px solid red, solid)
+    2
+    >> index(1px solid red, red)
+    3
+```
+
+#### 2.`@warn`：直接在sass的控制台上输出信息；
+```
+@function color($color) {
+  @if not map-has-key($colors, $color) {
+    @warn "No color found for `#{$color}` in `$colors` map.";
+  }
+
+  @return map-get($colors, $color);
+}
+```
+
+#### 3.对于未知参数数量使用`argList`；
+```
+@function map-key-value-pair($pair) {
+  @if not length($pair) == 2 {
+    @warn "`map-key-value-pair` function is expecting a list of 2 items, #{length($pair)} given.";
+    @return false;
+  }
+
+  // Then do something
+}
+
+
+@function max($values...) {
+  $max: nth($values, 1);
+
+  @for $i from 2 through length($values) {
+    $value: nth($values, $i);
+    @if $value > $max {
+      $max: $value;
+    }
+  }
+
+  @return $max;
+}
+```
+
+#### 4.使用别名`get-configuration()`
+```
+@function get-configuration($option) {
+  @return map-get($global-configuration, $option);
+}
+
+@function conf($opt) {
+  @return get-configuration($opt);
+}
+```
+
+**PS:[scss函数](http://blog.csdn.net/macanfa/article/details/51747054)**
