--- a/docs/notes/expand/datetime-picker/需求分析.md
+++ b/docs/notes/expand/datetime-picker/需求分析.md
@@ -1,5 +1,5 @@
 #### 一、实现功能：
-1. 支持模式：月、周、日、时、分、秒；
+1. 支持到最小时间单位：月、周、日、时、分、秒；
 2. 起始日期和结束日期，其他日期禁止选择；
 3. 自定义每周由星期几开始；
 4. 推荐日期段；
@@ -18,7 +18,8 @@
 7. 选择准确 分/秒:![select_minute](./imgs/select_minute.png)；
 8. 模式选择 组件；（用户有输入该参数时放在界面最顶部）:![select_model](./imgs/select_model.png)；
 9. 编辑time 组件；（支持时、分、秒时放在最底部）:![edit_time](./imgs/edit_time.png)；
-10. 编辑date 组件；（编辑时、分、秒时放在页面最顶部）:![edit_date](./imgs/edit_date.png)。
+10. 编辑date 组件；（编辑月、周、日、时、分、秒时放在页面最顶部）:![edit_date](./imgs/edit_date.png)；
+11. 嵌入输入框中；（鼠标放上去或是点击之后展现出）：![edit_date](./imgs/widthBoxSelect.png)。
 
 #### 三、状态控制
 1. tr_active  --周激活；
@@ -32,32 +33,27 @@
 
 #### 四、用户输入
 |Name              |Type                |默认值  |描述        |
-|:---:|:----:|:----:|:----|
-|model             |TimeGr/string        |date   |支持的最小粒度|
+|:---|:----|:----|:----|
+|model             |TimeType/string      |date   |支持的最小粒度|
 |limitEnd          |Time                 |-      |结束日期|
 |limitStart        |Time                 |-      |起始日期|
 |refreshInterval   |number               |--     |时间刷新的间隔毫秒数，主要针对startDate或endDate设置为now或now-2h等需要不时刷新的场景|
 |weekStart         |string/TimeWeekStart |sun    |每周由星期几开始|
-|selectItems       | GrItem[]            |-      |picker支持切换的模式|
+|selectItems       | TypeItem[]          |-      |picker支持切换的模式|
 |recommendedBegin  |Time                 |-      |推荐开始日期|
 |recommendedEnd    |Time                 |-      |推荐结束日期|
 
 #### 五、数据类型
 
-- TimeGr
+- TimeType
 ```
-export enum TimeGr {
+export enum TimeType {
     second, minute, hour, date, week, month
 }
 ```
 - Time
 ```
-export type Moment = {
-    _isAMomentObject: boolean,
-    [prop: string]: any
-}
-
-export type Time = Date|string|Moment;
+export type Time = Date|string;
 ```
 
 - TimeWeekStart
@@ -67,12 +63,10 @@ export enum TimeWeekStart {
 }
 ```
 
-- GrItem
+- TypeItem
 ```
-export class GrItem {
+export class TypeItem {
     label: string;
-    value: TimeGr;
-    span?: string;
-    shortcuts?: Shortcut[];
+    value: TimeType;
 }
 ```
