--- a/docs/diary/2018.1.md
+++ b/docs/diary/2018.1.md
@@ -47,3 +47,29 @@
 [Scss项目文件结构](https://www.w3cplus.com/preprocessor/architecture-sass-project.html)
 
 [scss变量命名](https://www.w3cplus.com/preprocessor/beginner/variable-naming.html)
+
+#### 2018.1.20
+[javascript风格指南](https://github.com/alivebao/clean-code-js)
+
+[谷歌javascript风格指南(英文)](http://google.github.io/styleguide/javascriptguide.xml)
+
+[谷歌javascript风格指南(翻译)](http://blog.csdn.net/mergerly/article/details/46771905)
+
+#### 2018.1.22
+
+JavaScript中`(a==1 && a==2 && a==3)`可能为true的问题：[链接](https://www.jianshu.com/p/e546c96fe33c?utm_source=desktop&utm_medium=timeline)
+
+#### 2018.1.27
+
+大多数情况下，如果省略句尾的分号，js会自动添加；但是如果下一行的第一个字元是这五个字符之一：`(`,`[`,`/`,`+`,`-`，js将不对上一行句尾添加分号。
+
+```
+x = y
+　　(function (){
+　　　　...
+　　})();
+```
+等同于：
+```
+    x = y(function (){...})();
+```
