--- a/docs/essay(杂记)/2018年阅读计划.md
+++ b/docs/essay(杂记)/2018年阅读计划.md
@@ -5,7 +5,7 @@
 保证书中每一节均认真看过，对于知识点和基本理念有所理解和收获，书中demo可以的话，最好是手动实现一把。
 
 #### HTML
-1. [ ] `HTML5`相关的，哪本不限：旨在完整了解HTML5的一些元素、标签、功能和特性；
+1. [ ] `HTML5权威指南`：旨在完整了解HTML5的一些元素、标签、功能和特性；
 
 #### CSS
 2. [ ] `深入理解BootStrap`：旨在理解和掌握BS的设计理念，学习他对于css的运用，更好的拓展性；
@@ -30,7 +30,7 @@
 书中的东西必须吃透，哪怕看上三、四遍；书中的示例必须研究透，理解其原理。
 
 1. [ ] `CSS世界`：css基础进阶，吃透那些基础属性；
-2. [ ] `CSS揭秘`：css技巧进阶，能根据作者提供的那些示例，举一反三，可以反复模仿、尝试那些示例；
+2. [ ] `CSS揭秘`：css技巧进阶，能根据作者提供的那些示例，举一反三，可以反复模仿、尝试那些示例；同时要需熟知并掌握相关属性；
 3. [ ] `高程3` || `js权威指南` ：js的基础，不要再半途而废；
 4. [ ] `JavaScript设计模式` || `JavaScript面向对象编程指南`：总结解决问题的模式，不要再一遍一遍重复coding；
 5. [ ] `ES6标准入门`：ES7都出了，再不学，迟早被淘汰；
