2018年3月中旬汇总

--- a/docs/diary/2018.02.md
+++ b/docs/diary/2018.02.md
@@ -11,3 +11,15 @@
 8. `TypeError:Cannot read property 'length'`：在Chrome里读取 undefined 变量的length属性时就会发生这个错误。
 9. `Uncaught TypeError:Cannot set property`：我们无法对 undefined变量进行赋值或读取操作，否则的话会抛出“Uncaught TypeError: cannot set property of undefined”异常。
 10. `ReferenceError:event is not defined`：在访问一个未定义的对象或超出当前作用域的对象时就会发生这个错误。
+
+#### 2018.02.22
+
+##### js错误类型--编写可维护的JavaScript
+
+1. Error：所有错误的基本类型，实际上引擎从来不会抛出该类型的错误；
+2. EvalError：通过eval()函数执行代码发生错误时抛出；
+3. RangeError：一个数字超出它的边界时抛出，例如试图创建一个长度为-20的数组；
+4. ReferenceError：期望的对象不存在时抛出，例如试图在一个null对象引用上调用一个函数；
+5. SyntaxError：给eval()函数传递的代码中有语法错误时抛出；
+6. TypeError：变量不是期望的类型时抛出，例如 new 10 或 "prop" in true；
+7. URIError：给encodeURI()、encodeURIComponent()、decodeURI()或者decodeURIComponent()等函数传递格式非法的URI字符串时抛出。
