--- a/docs/notes/CSS/developer.mozilla.org/属性.md
+++ b/docs/notes/CSS/developer.mozilla.org/属性.md
@@ -19,7 +19,7 @@
 建议将所有的元素的box-sizing都设为border-box：
 ```
     *,*:before,*:after{
-        -webkit-box=sizing:border-box;
+        -webkit-box-sizing:border-box;
         -moz-box-sizing:border-box;
         box-sizing:border-box;
     }
