近一个进度总结

--- a/docs/diary/2018.01.md
+++ b/docs/diary/2018.01.md
@@ -55,6 +55,8 @@
 
 [谷歌javascript风格指南(翻译)](http://blog.csdn.net/mergerly/article/details/46771905)
 
+[谷歌HTML/CSS风格指南(翻译)](https://blog.csdn.net/chajn/article/details/7538688)
+
 #### 2018.1.22
 
 JavaScript中`(a==1 && a==2 && a==3)`可能为true的问题：[链接](https://www.jianshu.com/p/e546c96fe33c?utm_source=desktop&utm_medium=timeline)
