--- a/docs/essay(杂记)/2018年修行计划.md
+++ b/docs/essay(杂记)/2018年修行计划.md
@@ -40,6 +40,8 @@
 1. [ ] `HTML5权威指南`：旨在完整了解HTML5的一些元素、标签、功能和特性；
 
 - CSS
+
+1. [ ] `图解CSS3核心技术与案列实战`:css3基础；
 2. [ ] `深入理解BootStrap` || `jQuery源码解析`：旨在理解和掌握BS的设计理念，学习他对于css的运用，更好的拓展性；以及知道和掌握一些js的功底和运用，借鉴和学习一些jQuery的架构和设计思想
 3. [ ] `学习响应式设计`：学习响应式设计，更好的响应式布局；
 4. [ ] `CSS禅意花园`：今年一定要完整的过一遍，体会布局的美妙，*`菜根谭`也许可以参照其中的创意来实现*；
