--- a/docs/resources/面试题.md
+++ b/docs/resources/面试题.md
@@ -99,3 +99,41 @@ firefox是1function；chrome是1object；其他浏览器未测试
 8. http协议；
 9. 如何释放闭包的内存；
 10. 事件响应的步骤和如何优化
+
+#### 面试题
+
+1. 输入url会发生啥
+2. BFC
+3. let var 区别，let是怎么实现的
+4. class
+5. 原型跟原型链
+6. 水平垂直居中
+7. margin auto是怎么实现的，margin的实现原理
+8. 小程序遇到了哪些坑
+9. es6用过哪些
+10. tcp/ip 握手
+11. es6用过哪些
+
+#### 题目：
+
+输出 2-32 的随机数，这个随机数的数量根据我所传的参数决定。假设我传入参数5，则输出2-32之间的五个随机数。假设传入参数6，则输出2-32之间的六个随机数，要求输出的随机数不能重复。
+
+```js
+function GetNums(num){
+    if(typeof num !== "number" || Math.floor(num)<num){
+        alert('请输入正整数');
+        return;
+    }
+    var result=[];
+    for(var i=0;i<num;i+=1){
+        var random = Math.random()*30 +2;
+        if(result.includes(random)){
+            i--;
+        }else{
+            result.push(random);
+        }
+    }
+    return result;
+}
+GetNums(true)
+```
