--- a/docs/essay(杂记)/小贴士.md
+++ b/docs/essay(杂记)/小贴士.md
@@ -12,3 +12,8 @@ show table status from `smodb3.0`
 - F1：打开一个新标签页；
 - F3：页面查找 == ctrl+F；
 - F6：选中导航栏URL；
+
+#### 4. 进入开机启动项
+
+1. 点击“开始”菜单，在最下面的程序搜索中输入：msconfig ，然后按回车键；
+2. 在弹出的窗口里，点击“启动”选项卡，就能看到当前一些启动的程序。
