--- a/docs/lifeDiary/2018.06.md
+++ b/docs/lifeDiary/2018.06.md
@@ -1,5 +1,9 @@
 # 2018.06
 
-## 2018.06.19
+## 2018.06.19 晴
 
 昨天终于下定决心买了台thinkpad E480，抓紧时间把工作电脑里的资料备份过来，把基础夯实一遍，展示demo做好，就该找工作了。要抓紧，时间不等人。
+
+## 2018.06.20 22:57 雨
+
+今天上班时间，将基于webpack的样式框架重新调整了一遍，现在大致已经可以打包css和js了，并且也支持了demo测试。webpack继续深入研究学习一番，争取早日把这个框架做出来。今晚表现需继续发挥，抵制住了放松的诱惑，在看完《无问西东》后毅然开始看《深入浅出 Webpack》。不过需要注意的是，该书版本有点落后，内容需持怀疑态度。只可了解webpack有哪些功能和实现可行性，具体用法不可参照，需严格查阅官方文档。
