一大波累计提交，重点是前端知识点回顾

--- a/docs/lifeDiary/2018.05.md
+++ b/docs/lifeDiary/2018.05.md
@@ -39,3 +39,10 @@
 期间，将《现代前端技术解析》过完了第一遍，粗略了解了现代前端的技术；有了一个微信小程序的idea--“黄金屋”，将《增广贤文》等古书籍做成一个阅读版的小程序；顺便将科目三考过了。
 
 等明天将科目三理论考考过，就开始着手准备小程序的事了。等霞科目三考过，就开始准备新工作的事了。时间不等人，早点讲基础夯实，到时也好跳的高一点。
+
+删除[深入浅出webpack](http://webpack.wuhaolin.cn)网站的广告：
+
+```js
+    document.getElementsByClassName("gitbook-plugin-modal-content")[0].remove();
+    document.getElementsByClassName("gitbook-plugin-modal")[0].style.width='0px';
+```
