--- a/docs/resources/面试题.md
+++ b/docs/resources/面试题.md
@@ -44,7 +44,33 @@ var x = 1;
 ```
 firefox是1function；chrome是1object；其他浏览器未测试
 
+####3
 
+```js
+    var obj1 = {name:'obj1',fn(){console.log(this.name);}};
+    var obj2 = {name:'obj2'};
+    var obj3 = {name:'obj3'};
+    obj1.fn();
+    var newFn = obj1.fn;
+    newFn();
+    newFn.call(obj2);
+    obj3.fn = newFn;
+    obj3.fn();
+    var newFn = obj1.fn.bind(obj1);
+    newFn();
+    newFn.call(obj2);
+    obj3.fn=newFn;
+    obj3.fn();
+
+//"obj1"
+//""
+//"obj2"
+//"obj3"
+//"obj1"
+//"obj1"
+//"obj1"
+
+```
 
 #### 小伙子，再接再厉
 
