--- a/docs/notes/Angular2/踩坑.md
+++ b/docs/notes/Angular2/踩坑.md
@@ -27,3 +27,22 @@ TypeError: Cannot read property 'module' of undefined`
 `import { ProjectService,DoActionService} from '../../service/index';`
 
 去掉`/index`即可，ng6打包服务会自动去service文件夹下查找index.ts文件
+
+## template中使用枚举类型报错：
+
+`Error: projects\sys\src\lib\component\message-model\message-model.component.html(3,27): : This condition will always return 'false' since the types 'MessageType' and '"1"' have no overlap.`
+
+经排查，是对比类型和枚举类型不一致导致：
+
+`model_hd_serious:message.type=='1',model_hd_crash:message.type=='9',model_hd_communication:message.type=='16'`
+
+```
+export enum MessageType {
+    normal=0,
+    serious,
+    crash=9,
+    communication=16
+}
+```
+
+enum是number类型，对比类型却用了string类型。
