--- a/docs/notes/Angular2/踩坑.md
+++ b/docs/notes/Angular2/踩坑.md
@@ -46,3 +46,13 @@ export enum MessageType {
 ```
 
 enum是number类型，对比类型却用了string类型。
+
+## ng build libraryName 后报 Cannot read property 'isSkipSelf' of null 的错
+
+`BUILD ERROR
+Cannot read property 'isSkipSelf' of null
+TypeError: Cannot read property 'isSkipSelf' of null`
+
+引发原因：当前打包的lib内发生错误，*这次错误是由于common模块重命名为bf-common模块，basic内的引用包名未修改，报错导致的*
+
+解决途径：将当前basic模块引用common的地方均调整好，打包报错即消失。
