--- a/docs/notes/Angular2/踩坑.md
+++ b/docs/notes/Angular2/踩坑.md
@@ -28,6 +28,8 @@ TypeError: Cannot read property 'module' of undefined`
 
 去掉`/index`即可，ng6打包服务会自动去service文件夹下查找index.ts文件
 
+**补充**当文件目录下有一个与文件目录同名的文件时，微软会将那个同名文件认作是它所在的目录，这可能会导致意料不到的问题（比如它会认为是一个循环调用）。所以，在目录下，最好只有一个index文件即可，单个文件不要跟目录同名。
+
 ## template中使用枚举类型报错：
 
 `Error: projects\sys\src\lib\component\message-model\message-model.component.html(3,27): : This condition will always return 'false' since the types 'MessageType' and '"1"' have no overlap.`
