--- a/docs/notes/Angular2/踩坑.md
+++ b/docs/notes/Angular2/踩坑.md
@@ -58,3 +58,15 @@ TypeError: Cannot read property 'isSkipSelf' of null`
 引发原因：当前打包的lib内发生错误，*这次错误是由于common模块重命名为bf-common模块，basic内的引用包名未修改，报错导致的*
 
 解决途径：将当前basic模块引用common的地方均调整好，打包报错即消失。
+
+##  TypeError: Object prototype may only be an Object or null: undefined
+
+`core.js:14597 ERROR Error: Uncaught (in promise): TypeError: Object prototype may only be an Object or null: undefined
+TypeError: Object prototype may only be an Object or null: undefined
+
+ERROR Error: Uncaught (in promise): Error: Cannot find 'DynamicLoaderWrapperModule' in './external-modules/dynamic-loader-wrapper.module'
+Error: Cannot find 'DynamicLoaderWrapperModule' in './external-modules/dynamic-loader-wrapper.module'`
+
+引发原因：有可能是在基类中导入了子类，所以在编译时就出错了。
+
+解决途径：将分散在各part中的event.ts子类，集中到与part-event.ts同级的目录中，问题得到解决。猜测是引用路径的原因
