--- a/docs/resources/面试题及解答汇总.md
+++ b/docs/resources/面试题及解答汇总.md
@@ -41,6 +41,9 @@
         - [6.单元测试](#6单元测试)
         - [7.React + Redux](#7react--redux)
         - [8.输入url会发生啥](#8输入url会发生啥)
+        - [9.RXJS](#9rxjs)
+        - [10.npm](#10npm)
+        - [11.一些概念](#11一些概念)
 - [前端大牛or架构师应该具备这些](#前端大牛or架构师应该具备这些)
     - [熟悉html5,css3,es6](#熟悉html5css3es6)
         - [1.知道其特性，能解决其对应的兼容和性能问题](#1知道其特性能解决其对应的兼容和性能问题)
@@ -59,7 +62,7 @@
         - [5.jq,zepto的使用体验，其基本语法以及其核心思想](#5jqzepto的使用体验其基本语法以及其核心思想)
         - [6.手机端手势事件](#6手机端手势事件)
     - [持续关注业界的新话题和新技术](#持续关注业界的新话题和新技术)
-        - [1.研究过ng\react\vue的一种或以上，知道其原理](#1研究过ng\react\vue的一种或以上知道其原理)
+        - [1.研究过ng、react、vue的一种或以上，知道其原理](#1研究过ngreactvue的一种或以上知道其原理)
         - [2.微信小程序，公众号开发](#2微信小程序公众号开发)
         - [3.支付宝服务窗开发](#3支付宝服务窗开发)
         - [4.前沿技术研究以及技术调研](#4前沿技术研究以及技术调研)
@@ -211,6 +214,14 @@
 
 #### 8.输入url会发生啥
 
+#### 9.RXJS
+
+#### 10.npm
+
+#### 11.一些概念
+
+[链接](https://github.com/MrXYMing/myRepository/blob/master/docs/diary/2018.07.md)
+
 ---
 ---
 
@@ -254,7 +265,7 @@
 
 ## 持续关注业界的新话题和新技术
 
-#### 1.研究过ng\react\vue的一种或以上，知道其原理
+#### 1.研究过ng、react、vue的一种或以上，知道其原理
 
 #### 2.微信小程序，公众号开发
 
