--- a/docs/resources/面试题及解答汇总.md
+++ b/docs/resources/面试题及解答汇总.md
@@ -130,6 +130,67 @@
 
 #### 2.页面加载的过程
 
+- 这个过程可简单的分为5步：
+    1. 域名解析，根据域名找到服务器的IP地址；
+    2. 建立TCP连接，浏览器与服务器经过3次握手后建立连接；
+    3. 浏览器发起HTTP请求，获取想要的资源；
+    4. 服务器响应HTTP请求，返回指定的资源；
+    5. 浏览器渲染页面，解析接收到的HTML、CSS和JS文件。
+- 浏览器解析、加载页面(补充上述第5点)：
+    1. 解析html构建dom树；
+    2. 构建render树；
+    3. 布局render树；
+    4. 绘制render树。
+- 浏览器为了体验友好，并不是文档全部都解析才绘制到屏幕上，而是从上至下开始解析html，遇到css会开启线程下载css(补充上述第2点)：
+    1. 将HTML构建成一个DOM树（Document Object Model），DOM树的构建过程是一个深度遍历过程：当前节点的所有子节点都构建好后才会去构建当前节点的下一个兄弟节点；
+    2. 将CSS解析构造成CSSOM树(CSS Object Model);
+    3. 根据DOM树和CSSOM树来构造Rendering Tree(渲染树)。*render树并不等同于DOM树，像Header或display:none这样的东西没必要放在渲染树中*；
+    4. 有了Render树，浏览器已经能知道网页中有哪些节点、各个节点的CSS定义以及他们的从属关系；
+    5. 计算出每个节点在屏幕中的位置 layout render tree；
+    6. 绘制，即遍历render树，并使用浏览器UI后端层绘制每个节点。
+    
+**拓展1：重绘、重排**
+- 性能优化中重绘、重排：
+    1. Reflow(回流/重排)：当它发现了某个部分发生了变化影响了布局，渲染树需要重新计算；
+    2. Repaint(重绘)：改变了某个元素的背景颜色、文字颜色等，不影响元素周围或内部布局的属性，将只会引起浏览器的repaint，根据元素的新属性重新绘制，使元素呈现新的外观。重绘不会带来重新布局，并不一定伴随重排。
+    3. Reflow要比Repaint更花费时间，也就更影响性能。所以要尽量避免过多的Reflow。
+- reflow的原因：
+    1. 页面初始化的时候；
+    2. 操作DOM时；
+    3. 某些元素的尺寸变了；
+    4. 如果CSS的属性发生了变化。
+- 减少reflow/repaint：
+    1. 不要一条一条地修改DOM的样式，可以预先定义好css的class，然后修改DOM的className；
+    2. 不要把DOM结点的属性值放在一个循环里当成循环里的变量；
+    3. 为动画的HTML元件使用fixed或absolute的position，那么修改他们的CSS是不会reflow的；
+    4. 不要使用table布局，因为可能很小的一个改动会造成整个table的重新布局。
+    
+**拓展2：影响页面渲染**
+- css事项：
+    1. dom深度尽量浅；
+    2. 减少inline javascript、css的数量；
+    3. 使用现代合法的css属性；
+    4. 不要为id选择器指定类名或是标签，因为id可以唯一确定一个元素；
+    5. 避免后代选择符，尽量使用子选择符。原因：子元素匹配符的概率要大于后代元素匹配符。后代选择符;#tp p{} 子选择符：#tp>p{}；
+    6. 避免使用通配符，举一个例子，.mod .hd *{font-size:14px;} 根据匹配顺序,将首先匹配通配符,也就是说先匹配出通配符,然后匹配.hd（就是要对dom树上的所有节点进行遍历他的父级元素）,然后匹配.mod,这样的性能耗费可想而知.
+- js事项：
+    1. 如果在解析html的时候遇到js会阻塞页面渲染，所以一般我们会将所有的script标签放到页面底部，也就是body闭合标签之前，这能确保在脚本执行前页面已经完成了DOM树渲染；
+    2. 尽可能地合并脚本。页面中的script标签越少，加载也就越快，响应也越迅速。无论是外链脚本还是内嵌脚本都是如此；
+    3. 采用无阻塞下载 JavaScript 脚本的方法：
+        1. 使用script标签的 defer、async 属性；
+        2. 使用动态创建的script元素来下载并执行代码等异步加载等方法。
+- defer、async区别：
+    defer、async都是异步下载，但是执行时刻不一致；
+    - 相同点：
+        1. 加载文件时不阻塞页面渲染；
+        2. 使用这两个属性的脚本中不能调用document.write方法；
+        3. 允许不定义属性值，仅仅使用属性名；
+    - 不同点：
+        1. html的版本html4.0中定义了defer，html5.0中定义了async；这将造成由于浏览器版本的不同而对其支持的程度不同；
+        2. 每一个async属性的脚本都在它下载结束之后立刻执行，同时会在window的load事件之前执行，所以就有可能出现脚本执行顺序被打乱的情况；
+        3. 每一个defer属性的脚本都是在页面解析完毕之后，按照原本的顺序执行，同时会在document的DOMContentLoaded之前执行；
+
+
 #### 3.结构组织
 
 #### 4.新增API(如本地存储、Canvas)
