--- a/docs/resources/面试题及解答汇总.md
+++ b/docs/resources/面试题及解答汇总.md
@@ -504,6 +504,8 @@ pc:jq ，移动端zepto
 
 #### 1.es6转换为es5的原理；
 
+[Babel原理及其使用](https://www.jianshu.com/p/e9b94b2d52e2)、[Babel 插件原理的理解与深入](https://segmentfault.com/a/1190000016359110)
+
 #### 2.vue的双向绑定的原理；
 
 #### 3.webpack的原理；
