--- a/docs/resources/面试题及解答汇总.md
+++ b/docs/resources/面试题及解答汇总.md
@@ -416,7 +416,11 @@
 
 ## 对前端工程化有一定的了解和实践
 
+`前端工程化就是：代码模块化；功能组件化；打包、构建、发布自动化、流程化；以及开发规范`。[为前端工程之崛起而编程](https://juejin.im/post/5c77eecbf265da2d8532f345)
+
 #### 1.工程化的项目目录、开发流程、构建优化打包部署，自动化、工具化
+
+[我们是如何做好前端工程化和静态资源管理](https://juejin.im/entry/5791e01a2e958a0065f74777)
 
 #### 2.组件化，组件库，团队内的基础建设
 
