--- a/docs/resources/面试题及解答汇总.md
+++ b/docs/resources/面试题及解答汇总.md
@@ -66,6 +66,7 @@
         - [2.微信小程序，公众号开发](#2微信小程序公众号开发)
         - [3.支付宝服务窗开发](#3支付宝服务窗开发)
         - [4.前沿技术研究以及技术调研](#4前沿技术研究以及技术调研)
+        - [5.状态管理](#5状态管理)
     - [具备服务端开发能力](#具备服务端开发能力)
         - [1.熟练使用一门非后端语言，如java,php；](#1熟练使用一门非后端语言如javaphp)
         - [2.或者熟练掌握nodejs，熟悉express/koa等其中一种框架或以上](#2或者熟练掌握nodejs熟悉expresskoa等其中一种框架或以上)
@@ -387,6 +388,8 @@
 #### 3.支付宝服务窗开发
 
 #### 4.前沿技术研究以及技术调研
+
+#### 5.状态管理
 
 ---
 
