--- a/docs/resources/面试题及解答汇总.md
+++ b/docs/resources/面试题及解答汇总.md
@@ -304,6 +304,8 @@
 
 #### 14.Angular脏检查机制
 
+**diff算法**
+
 #### 15.手写Angular指令，知道其生命周期
 
 #### 16.手动实现MVC
@@ -392,6 +394,8 @@
 #### 5.状态管理
 
 [Angular 真的需要状态管理么？](https://www.itcodemonkey.com/article/9929.html)
+
+[浅谈前端状态管理](http://web.jobbole.com/92397/)
 
 ---
 
