--- a/docs/notes/Angular2/踩坑.md
+++ b/docs/notes/Angular2/踩坑.md
@@ -70,3 +70,47 @@ Error: Cannot find 'DynamicLoaderWrapperModule' in './external-modules/dynamic-l
 引发原因：有可能是在基类中导入了子类，所以在编译时就出错了。
 
 解决途径：将分散在各part中的event.ts子类，集中到与part-event.ts同级的目录中，问题得到解决。猜测是引用路径的原因
+
+## ng build 后报错：TypeError: Cannot read property 'length' of undefined
+
+```js
+BUILD ERROR
+: TypeError: Cannot read property 'length' of undefined
+    at new _Tokenizer (D:\angular-cli-7.1.1\BeflamNextClient\node_modules\@angular\compiler\bundles\compiler.umd.js:10371:42)
+    at tokenize (D:\angular-cli-7.1.1\BeflamNextClient\node_modules\@angular\compiler\bundles\compiler.umd.js:10329:16)
+    at HtmlParser.Parser.parse (D:\angular-cli-7.1.1\BeflamNextClient\node_modules\@angular\compiler\bundles\compiler.umd.js:10957:35)
+    at HtmlParser.parse (D:\angular-cli-7.1.1\BeflamNextClient\node_modules\@angular\compiler\bundles\compiler.umd.js:11294:43)
+    at I18NHtmlParser.parse (D:\angular-cli-7.1.1\BeflamNextClient\node_modules\@angular\compiler\bundles\compiler.umd.js:17688:48)
+    at DirectiveNormalizer._preparseLoadedTemplate (D:\angular-cli-7.1.1\BeflamNextClient\node_modules\@angular\compiler\bundles\compiler.umd.js:15981:55)
+    at D:\angular-cli-7.1.1\BeflamNextClient\node_modules\@angular\compiler\bundles\compiler.umd.js:15976:80
+    at Object.then (D:\angular-cli-7.1.1\BeflamNextClient\node_modules\@angular\compiler\bundles\compiler.umd.js:2488:81)
+    at DirectiveNormalizer._preParseTemplate (D:\angular-cli-7.1.1\BeflamNextClient\node_modules\@angular\compiler\bundles\compiler.umd.js:15976:30)
+    at DirectiveNormalizer.normalizeTemplate (D:\angular-cli-7.1.1\BeflamNextClient\node_modules\@angular\compiler\bundles\compiler.umd.js:15962:40)
+
+Error: : TypeError: Cannot read property 'length' of undefined
+    at new _Tokenizer (D:\angular-cli-7.1.1\BeflamNextClient\node_modules\@angular\compiler\bundles\compiler.umd.js:10371:42)
+    at tokenize (D:\angular-cli-7.1.1\BeflamNextClient\node_modules\@angular\compiler\bundles\compiler.umd.js:10329:16)
+    at HtmlParser.Parser.parse (D:\angular-cli-7.1.1\BeflamNextClient\node_modules\@angular\compiler\bundles\compiler.umd.js:10957:35)
+    at HtmlParser.parse (D:\angular-cli-7.1.1\BeflamNextClient\node_modules\@angular\compiler\bundles\compiler.umd.js:11294:43)
+    at I18NHtmlParser.parse (D:\angular-cli-7.1.1\BeflamNextClient\node_modules\@angular\compiler\bundles\compiler.umd.js:17688:48)
+    at DirectiveNormalizer._preparseLoadedTemplate (D:\angular-cli-7.1.1\BeflamNextClient\node_modules\@angular\compiler\bundles\compiler.umd.js:15981:55)
+    at D:\angular-cli-7.1.1\BeflamNextClient\node_modules\@angular\compiler\bundles\compiler.umd.js:15976:80
+    at Object.then (D:\angular-cli-7.1.1\BeflamNextClient\node_modules\@angular\compiler\bundles\compiler.umd.js:2488:81)
+    at DirectiveNormalizer._preParseTemplate (D:\angular-cli-7.1.1\BeflamNextClient\node_modules\@angular\compiler\bundles\compiler.umd.js:15976:30)
+    at DirectiveNormalizer.normalizeTemplate (D:\angular-cli-7.1.1\BeflamNextClient\node_modules\@angular\compiler\bundles\compiler.umd.js:15962:40)
+
+    at Object.<anonymous> (D:\angular-cli-7.1.1\BeflamNextClient\node_modules\ng-packagr\lib\ngc\compile-source-files.js:40:68)
+    at Generator.next (<anonymous>)
+    at D:\angular-cli-7.1.1\BeflamNextClient\node_modules\ng-packagr\lib\ngc\compile-source-files.js:7:71
+    at new Promise (<anonymous>)
+    at __awaiter (D:\angular-cli-7.1.1\BeflamNextClient\node_modules\ng-packagr\lib\ngc\compile-source-files.js:3:12)
+    at Object.compileSourceFiles (D:\angular-cli-7.1.1\BeflamNextClient\node_modules\ng-packagr\lib\ngc\compile-source-files.js:17:12)
+    at Object.<anonymous> (D:\angular-cli-7.1.1\BeflamNextClient\node_modules\ng-packagr\lib\ng-v5\entry-point\ts\compile-ngc.transform.js:31:32)
+    at Generator.next (<anonymous>)
+    at D:\angular-cli-7.1.1\BeflamNextClient\node_modules\ng-packagr\lib\ng-v5\entry-point\ts\compile-ngc.transform.js:7:71
+    at new Promise (<anonymous>)
+```
+
+引发原因：给library重命名时，组件的名字也改了，但是`bef-gantt.component.ts`文件中关于templateUrl和styleUrls的引用并没有调整，所以编译出错。
+
+解决途径：将上述两者的引用名修改正确。
