--- a/docs/resources/面试题及解答汇总.md
+++ b/docs/resources/面试题及解答汇总.md
@@ -407,6 +407,73 @@
 
 #### 3.了解mvc，mvvm的设计模式
 
+[侃侃前端MVC设计模式](https://www.cnblogs.com/jinguangguo/p/3534422.html) 【1】
+
+[浅析前端开发中的 MVC/MVP/MVVM 模式](https://www.cnblogs.com/zhouyangla/p/6936455.html) 【2】
+
+**MVC**
+
+- 定义
+
+> MVC是一种设计模式，它将应用划分为3个部分：数据（模型）、展现层（视图）和用户交互（控制器）。换句话说，一个事件的发生是这样的过程：
+>
+> 1. 用户和应用产生交互。
+> 2. 控制器的事件处理器被触发。
+> 3. 控制器从模型中请求数据，并将其交给视图。
+> 4. 视图将数据呈现给用户。
+>
+> 我们不用类库或框架就可以实现这种MVC架构模式。关键是要将MVC的每部分按照职责进行划分，将代码清晰地分割为若干部分，并保持良好的解耦。这样可以对每个部分进行独立开发、测试和维护。
+
+- 特点：
+
+MVC的View直接与Model打交道，Controller仅仅起一个“桥梁”作用，它负责把View的请求转发给Model，再负责把Model处理结束的消息通知View。Controller就是一个消息分发器。不传递数据（业务结果），Controller是用来解耦View和Model的，具体一点说，就是为了让UI与逻辑分离（界面与代码分离）。
+
+- 关键点
+
+    1.构造模型Model
+    2.分离事件绑定，形成Controller
+    3.维护模型Model（and 模型集合Model Collection），通过Model的改变，通知对应的View重新渲染
+    4.分离View显示逻辑
+
+- 实现
+
+*详情见【2】*
+
+   1. Model和View之间使用了观察者模式，View事先通过Controller调用Model提供的注册事件在Model上进行注册，进而观察Model；待将来Model上发生数据改变时，通过Controller调用Model的发射事件来通知View做出更新。
+   2. View和Controller之间使用了策略模式，View在初始化时引入了Controller的实例(会调用Model提供的对数据处理的方法)来实现特定的响应策略(即对用户做出的不同操作绑定不同的响应事件)，如果要实现不同的响应策略只要用不同的Controller实例替换即可。
+   3. 控制器是模型和视图之间的纽带，MVC将响应机制封装在controller对象中，当用户和你的应用产生交互时，控制器中的事件触发器就开始工作了。
+   4. Model需要准备数据处理的方法、view的注册事件、数据变更的发射事件(即调用View的渲染事件)；
+   5. View需要准备响应数据变更的渲染事件、响应策略的绑定事件；
+   6. Controller需要准备初始化(Model、View)方法、响应策略的方法
+
+**MVVM**
+
+- 定义：
+
+模型-视图-视图模型。MVVM把View和Model的同步逻辑自动化了。以前Presenter负责的View和Model同步不再手动地进行操作，而是交给框架所提供的数据绑定功能进行负责，只需要告诉它View显示的数据对应的是Model哪一部分即可。
+
+- 特点：
+
+    1. ViewModel是model和View的中间接口
+    2. ViewMode提供View与Model数据之间的命令，即这里的data-bind的值，ViewModel中的方法
+    3. UI的渲染均由ViewModel通过命令来控制
+    
+- 关键点：
+
+    1. 数据绑定；
+    
+        目前主流框架实现数据绑定的方式大致如下：
+        1. 数据劫持(Vue)；
+        2. 发布-订阅模式(Knockout、Backbone)；
+        3. 脏值检查(Angular)。
+    2. 状态管理(angular中非必须)。
+    
+- 实现：
+
+    1. Model仅关注数据本身；
+    2. View使用模板语法来声明式的将数据渲染进DOM，当ViewModel对Model进行更新时，会通过数据绑定更新到View；
+    3. ViewModel时整个模式的重点，业务逻辑都主要集中在此，核心是数据绑定。当Model发生变化，ViewModel就会自动更新；ViewModel变化，Model也会更新。
+
 #### 4.nginx服务，集群服务
 
 #### 5.linux基础
