--- a/docs/resources/面试题及解答汇总.md
+++ b/docs/resources/面试题及解答汇总.md
@@ -385,6 +385,30 @@
 
 #### 1.研究过ng、react、vue的一种或以上，知道其原理
 
+**Angular**
+
+1. MVVM设计模式；
+2. 组件化；
+3. 脏值检查；
+4. 服务与依赖注入；
+5. 路由工作原理、路由守卫；
+6. 组件生命周期；
+7. 事件发射器；
+8. 延迟(懒)加载；
+9. 编译(AOT、JIT)；
+10. 模块；
+11. 动态组件；
+12. Observable与RxJS；
+13. 构建(底层webpack)；
+14. 跨域；
+15. 双向数据绑定；
+16. TypeScript；
+17. npm；
+
+**补充**
+
+[Angular 2的12个经典面试问题汇总](https://www.cnblogs.com/mfmdaoyou/p/7389012.html)
+
 #### 2.微信小程序，公众号开发
 
 #### 3.支付宝服务窗开发
