--- a/docs/resources/面试题及解答汇总.md
+++ b/docs/resources/面试题及解答汇总.md
@@ -390,6 +390,46 @@
 1. MVVM设计模式；
 2. 组件化；
 3. 脏值检查；
+
+- 参考文档
+    - [再谈Angular4 脏值检测(性能优化)](https://www.jb51.net/article/138777.htm)
+    - [Angular 2.x+ 脏检查机制理解](https://segmentfault.com/a/1190000009579737)
+    - [angular2 脏检查总述--zone.js 原理](https://blog.csdn.net/u010977147/article/details/53785733)
+    - [Change And Its Detection In JavaScript Frameworks](http://teropa.info/blog/2015/03/02/change-and-its-detection-in-javascript-frameworks.html)
+
+**补充一：ngForOf的优化**
+
+`*ngFor`常常操作大量数据，所以性能需要被格外关注。而我们可以从变更检测上做相应的处理。下面是官方文档做出的说明：
+
+> 变更的传导机制
+> 
+> 当迭代器的内容变化时，NgForOf 会对 DOM 做出相应的修改：
+>
+>     - 当新增条目时，就会往 DOM 中添加一个模板实例。
+> 
+>     - 当移除条目时，其对应的模板实例也会被从 DOM 中移除。
+> 
+>     - 当条目集被重新排序时，他们对应的模板实例也会在 DOM 中重新排序。
+> 
+> Angular 使用对象标识符（对象引用）来跟踪迭代器中的添加和删除操作，并把它们同步到 DOM 中。 这对于动画和有状态的控件（如用来接收用户输入的 <input> 元素）具有重要意义。添加的行可以带着动画效果进来，删除的行也可以带着动画效果离开。 而未变化的行则会保留那些尚未保存的状态，比如用户的输入。
+> 
+> 即使数据没有变化，迭代器中的元素标识符也可能会发生变化。比如，如果迭代器处理的目标是通过 RPC 从服务器取来的， 而 RPC 又重新执行了一次。那么即使数据没有变化，第二次的响应体还是会生成一些具有不同标识符的对象。Angular 将会清除整个 DOM， 并重建它（就仿佛把所有老的元素都删除，并插入所有新元素）。这是很昂贵的操作，应该尽力避免。
+> 
+> 要想自定义默认的跟踪算法，NgForOf 支持 trackBy 选项。 trackBy 接受一个带两个参数（index 和 item）的函数。 如果给出了 trackBy，Angular 就会使用该函数的返回值来跟踪变化。
+
+我们可以看出，ngForOf在变更检测时，是通过一个默认函数来处理的。这个函数接收当前项并返回一些值(这个值是一个根据当前项生成的标识符对象)。然后将这个函数返回的值与该函数上次返回的值进行比较。如果值发生更改，将会执行刷新操作。所以，如果默认函数接收了一个对象引用(及时这个对象的内部值一样，它也是两个值不会恒等)的话，它将不匹配之前返回的值。
+
+- 优化方式
+
+```js
+*ngFor = "let hero of heroes trackBy:trackByHeroes"
+
+trackByHeroes(index : number, hero : Hero){
+    return index;
+}
+```
+
+[参考文档一](https://blog.csdn.net/zhao_tuo/article/details/79261083)、[参考文档二](https://stackoverflow.com/questions/44970386/how-is-angulars-ngfor-loop-implemented/44971440#44971440)
 4. 服务与依赖注入；
 5. 路由工作原理、路由守卫；
 6. 组件生命周期；
