--- a/docs/resources/面试题及解答汇总.md
+++ b/docs/resources/面试题及解答汇总.md
@@ -391,11 +391,82 @@
 2. 组件化；
 3. 脏值检查；
 
+- 什么是脏值检查？
+
+所谓脏值检查就是指存储所有变量的值，每当可能有变量发生变化时,就将所有的旧值与新值进行比较，不相等就说明检测到变化，需要更新对应的视图。
+
+Angular把页面切分成若干个Component(组件)，组成一棵组件树。进入脏值检测后，从根组件自顶向下进行检测。Angular有两种策略：Default和OnPush。它们配置在组件上，决定脏值检测过程中不同的行为。
+
+- 数据何时变化？
+    1. 用户输入操作，比如点击，提交等；
+    2. 请求服务端数据；
+    3. 定时事件，比如setTimeout，setInterval。
+
+- 如何通知变化？
+
+Angular2是一个MVVM框架。数据模型（Model）转换成视图模型（ViewModel）后，绑定到视图（View）上渲染成肉眼可见的页面。因此，发现数据模型变化的时间点是更新页面的关键，也是调用脏值检测的关键。
+
+经过分析，工程师们发现，数据的变化往往由macrotask和microtask等异步事件引起。因此，通过重写浏览器所有的异步API，就能从源头有效地监听数据变化。Zone.js就是这样一个猴子脚本（Monkey Patch）。Angular 4使用了一个定制化的Zone（NgZone），它会通知Angular可能有数据变化，需要更新视图中的数据（脏值检测）。
+
+- Angular2的变更检测
+
+Angular 中每个组件都有自己的变化检测器，这使得我们可以对每个组件分别控制如何以及何时进行变化检测。
+
+由于每个组件都有其自己的变化检测器，即一个 Angular 应用程序由一个组件树组成，所以逻辑结果就是我们也有一个变化检测器树，这棵树也可以看作是一个有向图，数据总是从上到下流动。
+
+数据从上到下的原因是因为变化检测也总是从上到下对每一个单独的组件进行，每一次从根组件开始，单向数据流比循环脏检查更可预测，我们总是可以知道视图中使用的数据来自哪里。
+
+我们假设在组件树的某个地方触发一个事件，比如一个按钮被点击，zones 会进行事件的处理并通知 Angular，然后变化检测依次向下传递。
+
+- ChangeDetectionStrategy
+
+变更检测器用于检测变更的策略。
+
+    1. Default：Angular默认的变化检测策略，也就是脏检查(只要有值发生变化，就全部检查)；
+    2. OnPush：就是只有当输入数据的引用发生变化或者有事件触发时，组件进行变化检测。
+
+```js
+@Component({
+  template: `
+    <h2>{{vData.name}}</h2>
+    <span>{{vData.email}}</span>
+  `,
+  changeDetection: ChangeDetectionStrategy.OnPush
+})
+
+class VCardCmp {
+  @Input() vData;
+}
+```
+
+> VCardCmp 只依赖于它的输入属性，如果它的输入没有改变，我们可以告诉 Angular 跳过这个组件的子树的变化检测;只有当输入数据的引用发生变化组件才进行变化检测。
+
+- [ChangeDetectorRef](https://angular.cn/api/core/ChangeDetectorRef)
+
+> Angular 各种视图的基础类，提供变更检测功能。 变更检测树会收集要检查的所有视图。 使用这些方法从树中添加或移除视图、初始化变更检测并显式地把这些视图标记为脏的，意思是它们变了、需要重新渲染。
+
+    1. markForCheck()：当视图使用 OnPush（checkOnce）变更检测策略时，把该视图显式标记为已更改，以便它再次进行检查。*当输入已更改或视图中发生了事件时，组件通常会标记为脏的（需要重新渲染）。调用此方法会确保即使那些触发器没有被触发，也仍然检查该组件。*
+    2. detach():从变更检测树中分离开视图。 已分离的视图在重新附加上去之前不会被检查。 与 detectChanges() 结合使用，可以实现局部变更检测。*即使已分离的视图已标记为脏的，它们在重新附加上去之前也不会被检查。*
+    3. detectChanges()：检查该视图及其子视图。与 detach 结合使用可以实现局部变更检测。
+    4. checkNoChanges():检查变更检测器及其子检测器，如果检测到任何更改，则抛出异常。*在开发模式下可用来验证正在运行的变更检测器是否引入了其它变更。*
+    5. reattach()：把以前分离开的视图重新附加到变更检测树上。 视图会被默认附加到这棵树上。
+
+[使用说明](https://angular.cn/api/core/ChangeDetectorRef#usage-notes)
+
+- 总结
+
+脏值检查就是存储所有变量的值，每当可能有变量发生变化时，就用新值跟旧值作比较，如果不一样就进行视图更新。
+
+而用户输入操作、请求服务器数据、计时器等都可能引起数据变更。
+
+数据变化往往都是由异步事件引起的，而zone.js改写了原生的异步事件api，它能从源头就有效的监听数据变化。Angular采用了定制的NgZone，它能通知angular可能有数据变化，需要进行视图变更。
+
 - 参考文档
     - [再谈Angular4 脏值检测(性能优化)](https://www.jb51.net/article/138777.htm)
     - [Angular 2.x+ 脏检查机制理解](https://segmentfault.com/a/1190000009579737)
     - [angular2 脏检查总述--zone.js 原理](https://blog.csdn.net/u010977147/article/details/53785733)
     - [Change And Its Detection In JavaScript Frameworks](http://teropa.info/blog/2015/03/02/change-and-its-detection-in-javascript-frameworks.html)
+    - [Angular2双向绑定及变化检测](https://www.jianshu.com/p/cee44e8831c9)
 
 **补充一：ngForOf的优化**
 
