--- a/docs/resources/面试题及解答汇总.md
+++ b/docs/resources/面试题及解答汇总.md
@@ -44,6 +44,7 @@
         - [9.RXJS](#9rxjs)
         - [10.npm](#10npm)
         - [11.一些概念](#11一些概念)
+        - [12.函数防抖和节流](#12函数防抖和节流)
 - [前端大牛or架构师应该具备这些](#前端大牛or架构师应该具备这些)
     - [熟悉html5,css3,es6](#熟悉html5css3es6)
         - [1.知道其特性，能解决其对应的兼容和性能问题](#1知道其特性能解决其对应的兼容和性能问题)
@@ -340,6 +341,69 @@
 
 [链接](https://github.com/MrXYMing/myRepository/blob/master/docs/diary/2018.07.md)
 
+#### 12.函数防抖和节流
+
+- 函数防抖：当数据短时间内一直变化，导致页面一直抖动的问题。常见于输入框输入动态显示数据的情况。
+
+解决：可以通过setTimeout来处理，隔200ms左右再执行，只要这个函数一直在执行，就clearTimeout它，直到没有触发这事件为止，再执行最后触发的那一次。
+
+```js
+function debounce(func, delay) {
+    var timeout;
+    return function(e) {
+        console.log("清除",timeout,e.target.value)
+        clearTimeout(timeout);
+        var context = this, args = arguments
+        console.log("新的",timeout, e.target.value)
+        timeout = setTimeout(function(){
+          console.log("----")
+          func.apply(context, args);
+        },delay)
+    };
+};
+
+var validate = debounce(function(e) {
+    console.log("change", e.target.value, new Date-0)
+}, 380);
+
+// 绑定监听
+document.querySelector("input").addEventListener('input', validate);
+```
+
+- 函数节流：跟函数防抖类似，但函数节流会用在比input、keyup更频繁触发的事件中，比如resize、touchmove、mousemove、scroll等事件中。
+
+解决方法：保存上次执行的时间点和定时器，让用户的方法在某个时间段内只执行一次。
+
+```js
+function throttle(fn, threshhold) {
+ var timeout
+ var start = new Date;
+ var threshhold = threshhold || 160
+ return function () {
+
+ var context = this, args = arguments, curr = new Date() - 0
+ 
+ clearTimeout(timeout)//总是干掉事件回调
+ if(curr - start >= threshhold){ 
+     console.log("now", curr, curr - start)//注意这里相减的结果，都差不多是160左右
+     fn.apply(context, args) //只执行一部分方法，这些方法是在某个时间段内执行一次
+     start = curr
+ }else{
+ //让方法在脱离事件后也能执行一次
+     timeout = setTimeout(function(){
+        fn.apply(context, args) 
+     }, threshhold);
+    }
+  }
+}
+var mousemove = throttle(function(e) {
+ console.log(e.pageX, e.pageY)
+});
+
+// 绑定监听
+document.querySelector("#panel").addEventListener('mousemove', mousemove);
+```
+
 ---
 ---
 
@@ -501,8 +565,60 @@ trackByHeroes(index : number, hero : Hero){
 ```
 
 [参考文档一](https://blog.csdn.net/zhao_tuo/article/details/79261083)、[参考文档二](https://stackoverflow.com/questions/44970386/how-is-angulars-ngfor-loop-implemented/44971440#44971440)
+
 4. 服务与依赖注入；
+
+- **简介**
+
+- 服务
+
+Angulkar把组件和服务区分开，以提高模块性和复用性。组件只管用户体验，它提供用于数据绑定的属性和方法，以便作为视图（由模板渲染）和应用逻辑（通常包含一些模型的概念）的中介者。
+
+组件应该把诸如从服务器获取数据、验证用户输入或直接往控制台中写日志等工作委托给各种服务。通过把各种处理任务定义到可注入的服务类中，可以让它被任何组件使用。 通过在不同的环境中注入同一种服务的不同提供商，还可以让应用更具适应性。
+
+通过把组件中和视图有关的功能与其他类型的处理分离开，可以让组件类更加精简、高效。
+
+- 依赖注入（dependency injection）
+
+DI 被融入 Angular 框架中，用于在任何地方给新建的组件提供服务或所需的其它东西。 组件是服务的消费者，也就是说，你可以把一个服务注入到组件中，让组件类得以访问该服务类。
+
+在 Angular 中，要把一个类定义为服务，要使用 @Injectable() 装饰器来表明一个组件或其它类（比如另一个服务、管道或 NgModule）拥有一个依赖；同时用它来提供元数据，便让 Angular 可以把它作为依赖注入到组件中。
+
+> 1. 注入器是主要的机制。Angular 会在启动过程中为你创建全应用级注入器以及所需的其它注入器。你不用自己创建注入器。
+> 
+> 2. 该注入器会创建依赖、维护一个容器来管理这些依赖，并尽可能复用它们。
+> 
+> 3. 提供商是一个对象，用来告诉注入器应该如何获取或创建依赖。
+
+*使用的时候，在组件的构造器中建立关联*。
+
+你的应用中所需的任何依赖，都必须使用该应用的注入器来注册一个提供商，以便注入器可以使用这个提供商来创建新实例。 对于服务，该提供商通常就是服务类本身。
+
+当 Angular 创建组件类的新实例时，它会通过查看该组件类的构造函数，来决定该组件依赖哪些服务或其它依赖项。
+
+当 Angular 发现某个组件依赖某个服务时，它会首先检查是否该注入器中已经有了那个服务的任何现有实例。如果所请求的服务尚不存在，注入器就会使用以前注册的服务提供商来制作一个，并把它加入注入器中，然后把该服务返回给 Angular。
+
+当所有请求的服务已解析并返回时，Angular 可以用这些服务实例为参数，调用该组件的构造函数。
+
+- 提供服务
+
+对于要用到的任何服务，必须至少注册一个提供商。服务可以在自己的元数据中把自己注册为提供商，这样可以让自己随处可用。或者，你也可以为特定的模块或组件注册提供商。要注册提供商，就要在服务的 @Injectable() 装饰器中提供它的元数据，或者在@NgModule() 或 @Component() 的元数据中。
+
+    1. 服务自身的@Injectable()的 providedIn ：通过将其与@NgModule或其他注入器类型关联，或指定其在"root"注入器中提供（默认），从而确定哪个注入器将提供注入表；而且在代码编译打包时,可以执行摇树优化，从而移除所有没在应用中使用过的服务。推荐使用此种方式注册服务；
+    2. 特定的 NgModule 中的 providers 属性：该服务的同一个实例将会对该 NgModule 中的所有组件可用；
+    3. 组件的@component() 的 providers 属性：会为该组件的每一个新实例提供该服务的一个新实例。
+
+- 总结
+
+创建可注入的服务，通过@Injectable()拥有一个依赖；Angular创建一个注入器，用来管理这些依赖，做到复用它们；提供商来告诉注入器在如何创建或获取依赖；最后在组件的构造器中创建关联，来获取这个依赖，即要求Angular在组件的构造函数中注入依赖项。
+
+- [Angular依赖注入](https://angular.cn/guide/dependency-injection)
+
+
 5. 路由工作原理、路由守卫；
+
+
+
 6. 组件生命周期；
 7. 事件发射器；
 8. 延迟(懒)加载；
