--- a/docs/resources/面试题及解答汇总.md
+++ b/docs/resources/面试题及解答汇总.md
@@ -375,6 +375,141 @@
 
 #### 4.js常见的编设计模式
 
+- 解释
+
+> 设计模式：在面向对象软件设计过程中，针对特定问题的简洁而优雅的解决方案。
+
+简单说，设计模式就是针对某一类问题的常规手法；对不同问题有它对应的特定解决套路，把这种套路总结起来，就是各自那套完善的解决方案，也就是设计模式了。
+
+- 单例模式
+
+一般用于处理在一个生命周期中仅需要存在一次即可完成任务的内容来提升性能及可用性。
+
+常见的有每个应用中的config配置。
+
+- 策略模式
+
+> 定义一系列的算法，把它们一个个封装起来，并且使它们可以相互替换。
+
+**一个基于策略模式的程序至少由 2 部分组成:**
+    1. 一组策略类，策略类封装了具体的算法，并负责具体的计算过程;
+    2. 环境类 Context，该 Context 接收客户端的请求，随后把请求委托给某一个策略类
+
+```js
+class Bouns {
+  salary: number = null; // 原始工资
+  levelObj: IPerformance = null; // 绩效等级对应的策略对象
+
+  constructor(salary: number, performanceMethod: IPerformance) {
+    this.setSalary(salary);
+    this.setLevelObj(performanceMethod);
+  }
+
+  setSalary(salary) {
+    this.salary = salary; // 保存员工的原始工资
+  }
+  setLevelObj(levelObj) {
+    this.levelObj = levelObj; // 设置员工绩效等级对应的策略对象
+  }
+  getResult(): number {
+    if (!this.levelObj || !this.salary) {
+      throw new Error("Necessary parameter missing");
+    }
+    return this.levelObj.calculate(this.salary);
+  }
+}
+interface IPerformance {
+  calculate(salary: number): number;
+}
+
+class PerformanceA implements IPerformance {
+  calculate(salary) {
+    return salary * 3;
+  }
+}
+
+class PerformanceB implements IPerformance {
+  calculate(salary) {
+    return salary * 2;
+  }
+}
+
+class PerformanceC implements IPerformance {
+  calculate(salary) {
+    return salary * 1;
+  }
+}
+
+console.log(new Bouns(4000, new PerformanceA()).getResult());
+console.log(new Bouns(2500, new PerformanceB()).getResult());
+```
+
+*Ng中的依赖注入，就是使用了策略模式的设计思路*。可以把每个服务看成是一个个策略，在组件/服务的构造函数中声明需要使用哪个服务（即选择策略），Angular的注入器就会将它的实例应用在这里。
+
+- 迭代器模式
+
+> 提供一种方法顺序一个聚合对象中各个元素，而又不暴露该对象内部表示。
+
+Array中已经提供了许多迭代器方法如：map,reduce,some,every,find,forEach等。
+
+- 中介者模式
+
+- 备忘录模式
+
+- 发布-订阅模式
+
+> 定义了一种一对多的依赖关系，即当一个对象的状态发生改变的时候，所有依赖他的对象都会得到通知。
+
+```js
+const event = {
+  peopleList: [],
+  addEventListener: function(eventName, fn) {
+    if (!this.peopleList[eventName]) {
+      //如果没有订阅过此类消息，创建一个缓存列表
+      this.peopleList[eventName] = [];
+    }
+    this.peopleList[eventName].push(fn);
+  },
+  dispatch: function() {
+    let eventName = Array.prototype.shift.call(arguments);
+    let fns = this.peopleList[eventName];
+    if (!fns || fns.length === 0) {
+      return false;
+    }
+    for (let i = 0, fn; (fn = fns[i++]); ) {
+      fn.apply(this, arguments);
+    }
+  }
+};
+```
+
+DOM的节点绑定事件就是最常见的发布-订阅模式。
+
+- 适配器模式
+
+> 是将一个类（对象）的接口（方法或属性）转化成客户希望的另外一个接口（方法或属性），适配器模式使得原本由于接口不兼容而不能一起工作的那些类（对象）可以一些工作。
+
+适配器模式在前端项目中一般会用于做数据接口的转换处理，比如把一个有序的数组转化成我们需要的对象格式：
+
+```js
+const arr = ["Javascript", "book", "前端编程语言", "8月1日"];
+function arr2objAdapter(arr) {
+  // 转化成我们需要的数据结构
+  return {
+    name: arr[0],
+    type: arr[1],
+    title: arr[2],
+    time: arr[3]
+  };
+}
+
+const adapterData = arr2objAdapter(arr);
+```
+
+- 参考：
+
+[JavaScript 常见设计模式](https://juejin.im/post/5c80f57f51882532cd57b64d)
+
 #### 5.jq,zepto的使用体验，其基本语法以及其核心思想
 
 #### 6.手机端手势事件
@@ -504,6 +639,20 @@ trackByHeroes(index : number, hero : Hero){
 4. 服务与依赖注入；
 5. 路由工作原理、路由守卫；
 6. 组件生命周期；
+
+生命周期的顺序：
+
+|钩子                      |用途及时机|
+|:---|:---|
+|ngOnChanges()            | 当 Angular（重新）设置数据绑定输入属性时响应。 该方法接受当前和上一属性值的 SimpleChanges 对象。在 ngOnInit() 之前以及所绑定的一个或多个输入属性的值发生变化时都会调用。|
+|ngOnInit()               | 在 Angular 第一次显示数据绑定和设置指令/组件的输入属性之后，初始化指令/组件。在第一轮 ngOnChanges() 完成之后调用，只调用一次。|
+|ngDoCheck()              | 检测，并在发生 Angular 无法或不愿意自己检测的变化时作出反应。在每个变更检测周期中，紧跟在 ngOnChanges() 和 ngOnInit() 后面调用。|
+|ngAfterContentInit()     | 每当 Angular 把外部内容投影进组件/指令的视图之后调用。第一次 ngDoCheck() 之后调用，只调用一次。|
+|ngAfterContentChecked()  | 每当 Angular 完成被投影组件内容的变更检测之后调用。ngAfterContentInit() 和每次 ngDoCheck() 之后调用|
+|ngAfterViewInit()        | 每当 Angular 初始化完组件视图及其子视图之后调用。第一次 ngAfterContentChecked() 之后调用，只调用一次。|
+|ngAfterViewChecked()     | 每当 Angular 做完组件视图和子视图的变更检测之后调用。ngAfterViewInit() 和每次 ngAfterContentChecked() 之后调用。|
+|ngOnDestory()            | 每当 Angular 每次销毁指令/组件之前调用并清扫。 在这儿反订阅可观察对象和分离事件处理器，以防内存泄漏。在 Angular 销毁指令/组件之前调用。|
+
 7. 事件发射器；
 8. 延迟(懒)加载；
 9. 编译(AOT、JIT)；
